# obsidian-vault-mcp

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/obsidian_vault_mcp/: __init__.py  __main__.py  config.py  server.py  vault_index.py
tests/: test_server.py  test_vault_index.py
