[project]
name = "obsidian-vault-mcp"
version = "0.1.0"
description = "MCP server for querying Obsidian vault graph data — backlinks, orphans, broken links, and more"
readme = "README.md"
authors = [
    { name = "Joshua Oliphant", email = "joshua.oliphant@hey.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
]

[project.scripts]
obsidian-vault-mcp = "obsidian_vault_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/obsidian_vault_mcp"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
